#11067 - CI 상세조회 화면 디자인 -> 모달에서 화면 조회로 변경

--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -78,6 +78,21 @@ table {
     }
   }
 }
+.z-table {
+  width: 100%;
+  &-head tr {
+    color: $list-head-font-color;
+    @include border(calc(#{$list-border-width} * 2), solid, $list-border-color, bottom);
+  }
+  &-body {
+    display: block;
+    overflow-y: auto;
+    & > td {
+      display: inline-block; // 말줄임 적용을 위해 추가
+      vertical-align: middle;
+    }
+  }
+}
 // span
 span {
   font-family: inherit;
