--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -25,7 +25,7 @@
     <div class="flex-column z-view-row">
         <div class="view-content">
             <pre>
-                <span class="view-text" th:text="${notice?.noticeContents}"/>
+                <span class="view-text" th:text="${notice?.noticeContents}"></span>
             </pre>
         </div>
     </div>
