--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1096,6 +1096,22 @@ table tr td, table tr th {
   word-wrap: normal;
 }
 
+.z-table {
+  width: 100%;
+}
+.z-table-head tr {
+  color: #222529;
+  border-bottom: calc(0.0625rem * 2) solid #CFD5D9;
+}
+.z-table-body {
+  display: block;
+  overflow-y: auto;
+}
+.z-table-body > td {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 span {
   font-family: inherit;
   margin: auto 0;
@@ -2816,7 +2832,11 @@ select {
   flex-direction: column;
 }
 .z-itsm-container .z-main-content .z-page-edit .z-edit-row {
-  margin-top: 0.625rem;
+  width: 100%;
+  margin: 0.625rem 0 0 0;
+}
+.z-itsm-container .z-main-content .z-page-edit .z-edit-row label {
+  margin: 0.625rem 0;
 }
 .z-itsm-container .z-main-content .z-page-edit label {
   margin: 0.625rem 0;
@@ -2982,6 +3002,7 @@ select {
   padding: 2.1875rem 23.125rem 3.125rem 23.125rem;
 }
 .z-itsm-container .z-main-content .z-page-view .z-view-row {
+  width: 100%;
   margin: 0.625rem 0 0 0;
 }
 .z-itsm-container .z-main-content .z-page-view .z-view-row label {
@@ -6129,27 +6150,6 @@ body.modal-active {
   -moz-border-radius: 0.0625rem;
   margin-bottom: 0.625rem;
 }
-.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view .ci-list table {
-  width: 100%;
-}
-.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view .ci-list table .z-list-head tr {
-  color: #222529;
-  border-bottom: calc(0.0625rem * 2) solid #CFD5D9;
-}
-.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view .ci-list table .z-list-body {
-  display: block;
-  overflow-y: auto;
-}
-.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view .ci-list table .z-list-body .list-row {
-  display: table;
-  width: 100%;
-  height: 3.125rem;
-  line-height: 3.125rem;
-}
-.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view .ci-list table .z-list-body .list-row > td {
-  display: inline-block;
-  vertical-align: middle;
-}
 .modal-dialog.cmdb-ci-view-modal .modal-content .table-set {
   margin-top: 2.188rem;
 }
@@ -7563,5 +7563,3 @@ body.modal-active {
   position: absolute;
   right: 3.75rem;
 }
-
-/*# sourceMappingURL=itsm.css.map */
