--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -86,6 +86,7 @@
 
     // 각 행
     .z-view-row {
+      width: 100%;
       margin: 0.625rem 0 0 0; // 10px 0 0 0
       label { margin: 0.625rem 0; } // 10px 0
     }
@@ -372,7 +373,9 @@
       flex-direction: column;
     }
     .z-edit-row {
-      margin-top: 0.625rem; // 10px
+      width: 100%;
+      margin: 0.625rem 0 0 0; // 10px 0 0 0
+      label { margin: 0.625rem 0; } // 10px 0
     }
     label { margin: 0.625rem 0; } // 10px 0
     .z-button-list {
