--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div layout:fragment="pageTitle">
-    <h1 th:text="#{token.label.list}"></h1>
+    <h1 th:text="#{dashboard.label.dashboard}"></h1>
     <h6 class="description ml-2 pl-2" th:text="#{dashboard.msg.viewDescription}"></h6>
 </div>
 <div layout:fragment="pageSearchResult">
